# cleric

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CTestTestfile.cmake  LICENSE  README.md  cmake_install.cmake  cpp.hint  runner.sh  setup_dependencies_raspberry.sh
cleric/: CMakeLists.txt  cmake_install.cmake
cleric/include/: props.hpp
cleric/include/catch/: catch.hpp
cleric/src/: cleric_app.cpp  cleric_app.hpp  main.cpp  props.cpp
cleric/src/business/: m2m_message.cpp  m2m_message.hpp  m2m_message_test.cpp
cleric/src/business/portable/: crc.cpp  m2m_portable_utils.cpp  m2m_portable_utils.hpp
cleric/src/business/portable/base64/: base64.cpp  base64.hpp
cleric/src/controller/: boxes_controller.cpp  boxes_controller.hpp  boxes_controller_test.cpp  m2m_controller.cpp  m2m_controller.hpp  m2m_controller_test.cpp  m2m_controller_tester.cpp  m2m_controller_tester.hpp  things_controller.cpp  things_controller.hpp  things_controller_test.cpp
cleric/src/data/: box.cpp  box.hpp  box_serialization_strategy.hpp  box_server.cpp  box_server.hpp  box_server_locator.cpp  box_server_locator.hpp  box_server_locator_test.cpp  box_server_test.cpp  box_test.cpp  hdd_box_serialization_strategy.cpp  hdd_box_serialization_strategy.hpp  hdd_box_serialization_strategy_test.cpp  ibox_serialization_strategy.hpp  iserializable.hpp  iserialization_strategy.hpp  mem_box_serialization_strategy.hpp  mem_serialization_strategy.hpp  smart_enum.hpp  thing.hpp
cleric/src/network/: host_info.cpp  host_info.hpp  mdns_responder.cpp  mdns_responder.hpp
cleric/src/network/libmdnsd/: 1035.h  mdnsd.h  mdnsd_config.h  sdtxt.h  xht.h
cleric/test_data/: .gitignore  cleric.properties
cleric/www/: index.html  thirdparty.html
cmake/: cpprest_find_boost.cmake
devops/: build_cleric.sh  config.xml  create_ubuntu_jenkins_node_image.sh  jenkins-agent.json
doc/: ClericTestPlan.jmx  rest-controller-data-access.dot  rest-controller-usage.msc  swagger.yaml
include/cpprest/details/: basic_types.h
include/granada/: defaults.h  functions.h
include/granada/cache/: redis_cache_driver.h  shared_map_cache_driver.h  web_resource_cache.h
include/granada/http/: http_msg.h  parser.h
include/granada/http/controller/: browser_controller.h  oauth2_controller.h  plugin_controller.h
include/granada/http/oauth2/: map_oauth2.h  oauth2.h  redis_oauth2.h
include/granada/http/session/: map_session.h  redis_session.h  session.h
include/granada/plugin/: map_spidermonkey_plugin.h  plugin.h  redis_spidermonkey_plugin.h
include/granada/util/: application.h  file.h  time.h
include/pplx/: pplxtasks.h
samples/BingRequest/: bingrequest.cpp
samples/BlackJack/BlackJack_Client/: BlackJackClient.cpp
samples/BlackJack/BlackJack_Server/: BlackJack_Server.cpp  Dealer.cpp  Table.cpp  messagetypes.h  stdafx.h
samples/CasaLens/: casalens.cpp  datafetcher.cpp
samples/OAuth2Live/: MainPage.xaml.cpp
samples/Oauth1Client/: Oauth1Client.cpp
samples/Oauth2Client/: Oauth2Client.cpp
samples/WindowsLiveAuth/: live_connect.h
samples/granada/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake
samples/granada/oauth2-server/: .server.conf.un~  CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  oauth2-server.cpp  redis-oauth2-server.cpp  server.conf  server.conf~
samples/granada/plugin-server/: CMakeLists.txt  plugin-server-redis.cpp  plugin-server.cpp
samples/granada/sessions-get-and-post/: CTestTestfile.cmake  cmake_install.cmake  sessions-get-and-post.cpp
samples/granada/sessions-login-and-cart/: CTestTestfile.cmake  cmake_install.cmake  sessions-login-and-cart.cpp
src/: CMakeLists.txt  Makefile
src/granada/: defaults.cpp  functions.cpp
src/granada/cache/: redis_cache_driver.cpp  shared_map_cache_driver.cpp  web_resource_cache.cpp
src/granada/http/: http_msg.cpp  parser.cpp
src/granada/http/controller/: browser_controller.cpp  oauth2_controller.cpp  plugin_controller.cpp
src/granada/http/oauth2/: map_oauth2.cpp  oauth2.cpp  redis_oauth2.cpp
src/granada/http/session/: map_session.cpp  redis_session.cpp  session.cpp
src/granada/plugin/: plugin.cpp
src/granada/util/: application.cpp  file.cpp
src/http/client/: http_client.cpp  http_client_asio.cpp  http_client_winhttp.cpp
src/http/common/: http_msg.cpp
src/http/listener/: http_listener.cpp  http_listener_msg.cpp  http_server_asio.cpp  http_server_httpsys.cpp
src/http/oauth/: oauth1.cpp  oauth2.cpp
src/pch/: stdafx.h
src/utilities/: asyncrt_utils.cpp
src/websockets/client/: ws_client_wspp.cpp  ws_msg.cpp
tests/common/UnitTestpp/src/: stdafx.h
tests/common/utilities/: stdafx.h
tests/functional/http/client/: authentication_tests.cpp  building_request_tests.cpp  client_construction.cpp  compression_tests.cpp  connections_and_errors.cpp  header_tests.cpp  http_client_fuzz_tests.cpp  http_client_tests.h  http_methods_tests.cpp  multiple_requests.cpp  oauth1_tests.cpp  oauth2_tests.cpp  outside_tests.cpp  pipeline_stage_tests.cpp  progress_handler_tests.cpp  proxy_tests.cpp  request_helper_tests.cpp  request_stream_tests.cpp  request_uri_tests.cpp  response_extract_tests.cpp  response_stream_tests.cpp  status_code_reason_phrase_tests.cpp  to_string_tests.cpp
tests/functional/http/listener/: building_response_tests.cpp  connections_and_errors.cpp  header_tests.cpp  http_listener_tests.h  listener_construction_tests.cpp  reply_helper_tests.cpp  request_extract_tests.cpp  request_handler_tests.cpp  request_relative_uri_tests.cpp  (+5 more)
tests/functional/json/: construction_tests.cpp  iterator_tests.cpp  json_numbers_tests.cpp  negative_parsing_tests.cpp  parsing_tests.cpp  to_as_and_operators_tests.cpp
tests/functional/streams/: CppSparseFile.h  fstreambuf_tests.cpp  fuzz_tests.cpp  istream_tests.cpp  memstream_tests.cpp  ostream_tests.cpp  stdstream_tests.cpp  winrt_interop_tests.cpp
tests/functional/uri/: accessor_tests.cpp  combining_tests.cpp  constructor_tests.cpp  conversions_tests.cpp  diagnostic_tests.cpp  encoding_tests.cpp  operator_tests.cpp  resolve_uri_tests.cpp  splitting_tests.cpp  uri_builder_tests.cpp
(+28 files in other folders)
